clusters/dev/identity/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-https
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-ingress-ingressclassname: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.lhrm-lab.com
      secretName: keycloak-lhrm-lab-com-tls
  rules:
    - host: keycloak.lhrm-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
